修改连接字符串。

--- a/LTM.School/LTM.School.csproj
+++ b/LTM.School/LTM.School.csproj
@@ -13,4 +13,6 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
