--- a/LTM.School/appsettings.json
+++ b/LTM.School/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Data Source=.; Database=52ABPSchoolDB; User ID=sa; Password=123;"
+    "Default": "Data Source=.; Database=52ABPSchoolDB_2; User ID=sa; Password=123;"
   },
   "Logging": {
     "IncludeScopes": false,
