--- a/LTM.School/appsettings.json
+++ b/LTM.School/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "ConnectionStrings": {
     "Default": "Data Source=.; Database=52ABPSchoolDB; User ID=sa; Password=123;"
   },
@@ -7,5 +7,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "919a3eca-aafc-4bd8-98f5-42c03b757f45"
   }
 }
