升级.net core 版本为2.1.4

--- a/LTM.School/appsettings.json
+++ b/LTM.School/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
     "Default": "Data Source=.; Database=52ABPSchoolDB; User ID=sa; Password=123;"
+    //"Default": "Server=(localdb)\\mssqllocaldb;Database=ContosoUniversity2;Trusted_Connection=True;MultipleActiveResultSets=true"
+
   },
   "Logging": {
     "IncludeScopes": false,
